k8s/ingress.yaml
# ingress.yaml — espone solo il frontend all'esterno
# Il backend è raggiungibile solo internamente (ClusterIP)
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: market-ingress
#  annotations:
#    nginx.ingress.kubernetes.io/enable-modsecurity: "true"
#    nginx.ingress.kubernetes.io/enable-owasp-core-rules: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: marketpred.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
